# ComfyUI-Trellis2

./: .gitignore  README.md  autotune_cache.json  nodes.py  pyproject.toml
.github/workflows/: publish.yml
example_workflows/: Advanced.json  Multiview_Advanced.json  TextureMesh.json
trellis2/datasets/: __init__.py  components.py  flexi_dual_grid.py  sparse_structure_latent.py  sparse_voxel_pbr.py  structured_latent.py  structured_latent_shape.py  structured_latent_svpbr.py
trellis2/models/: __init__.py  sparse_elastic_mixin.py  sparse_structure_flow.py  sparse_structure_vae.py  structured_latent_flow.py
trellis2/models/sc_vaes/: fdg_vae.py  sparse_unet_vae.py
trellis2/modules/: image_feature_extractor.py  norm.py
trellis2/modules/attention/: config.py  full_attn.py  modules.py  rope.py
trellis2/modules/sparse/: basic.py  config.py  linear.py  nonlinearity.py
trellis2/modules/transformer/: blocks.py  modulated.py
trellis2/pipelines/: base.py  trellis2_image_to_3d.py
trellis2/trainers/: __init__.py  basic.py  utils.py
trellis2/utils/: data_utils.py  dist_utils.py  elastic_utils.py  general_utils.py  grad_clip_utils.py  mesh_utils.py  vis_utils.py
wheels/Linux/Torch270/: flex_gemm-0.0.1-cp312-cp312-linux_x86_64.whl  o_voxel-0.0.1-cp312-cp312-linux_x86_64.whl
wheels/Linux/Torch291/: cumesh-0.0.1-cp312-cp312-linux_x86_64.whl  o_voxel-0.0.1-cp312-cp312-linux_x86_64.whl
wheels/Windows/Torch270/: cumesh-0.0.1-cp311-cp311-win_amd64.whl  cumesh-0.0.1-cp312-cp312-win_amd64.whl  flex_gemm-0.0.1-cp311-cp311-win_amd64.whl  flex_gemm-0.0.1-cp312-cp312-win_amd64.whl  (+2 more)
(+11 files in other folders)
